Chapter 5 - Configuring and Inspecting Your Spring Boot Application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=up-and-running-first
+greeting.name=Dakota
+greeting.coffee=${greeting.name} is drinking coffee
+droid.id=BB-8
+droid.description=Small, rolling android. Probably doesn't drink coffee
+#management.endpoints.web.exposure.include=env, info, health
+management.endpoints.web.exposure.include=*
